# pc-novel-reader

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/scripts/: collect-updater-assets.mjs  create-updater-manifest.mjs  set-release-version.mjs
.github/workflows/: desktop-build.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/services/: desktop.ts  quotes.ts  storage.ts  updater.ts
src/services/parsers/: docx.ts  epub.ts  index.ts  markup.ts  odt.ts  pdf.ts  rtf.ts  txt.ts
src/types/: book.ts
