[package]
name = "pc-novel-reader"
version = "0.1.0"
description = "A local desktop novel reader"
authors = ["zhaomc"]
edition = "2021"

[lib]
name = "pc_novel_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
